# AI-Powered-Code-Review-CLI

./: .coderev.toml.example  .env.example  .gitignore  CHANGELOG.md  README.md  backend_combined.py  pyproject.toml  sample.patch  sample_bad.py
.github/scripts/: post_review_comments.py  write_job_summary.py
.github/workflows/: deep-audit.yml  eval-regression.yml  pr-review.yml  scheduled-audit.yml
coderev/: __init__.py  agent.py  cache.py  chunker.py  cli.py  config.py  eval.py  explain.py  formatter.py  judge.py  pipeline.py  sarif.py  schema.py  utils.py
coderev/agents/: __init__.py  logic.py  performance.py  security.py  synthesizer.py
docs/: architecture.md
tests/: test_agent.py  test_cache.py  test_chunker.py  test_config.py  test_eval.py  test_explain.py  test_judge.py  test_pipeline.py  test_sarif.py  test_schema.py  test_utils.py
tests/golden/: clean_good.py
tests/golden/clean/: clean_auth.json  clean_auth.py
tests/golden/correctness/: off_by_one.json  off_by_one.py
tests/golden/performance/: n_plus_one.json  n_plus_one.py
tests/golden/security/: hardcoded_secrets.json  hardcoded_secrets.py  path_traversal.json  path_traversal.py  sql_injection.json  sql_injection.py
